# minimal-cpp-library-template

./: .gitignore  .gitignore.swo  .gitignore.swp  CMakeLists.txt  README.md
cmake/: api.cmake  libminimalConfig.cmake.in  mod_fetch_googletest.cmake  mod_load_nolhmann_json.cmake  mod_load_or_download_library.cmake  mod_nlohmann_json.cmake  mod_spdlog.cmake
example/: CMakeLists.txt  main.cpp
example/basics/: CMakeLists.txt
example/basics/namespace_duration_scope_linkage/: CMakeLists.txt  main.cpp
example/domain_knowledge/: CMakeLists.txt
example/domain_knowledge/finance/: CMakeLists.txt  main.cpp
example/domain_knowledge/finance/portfolio_analysis/: CMakeLists.txt  main.cpp
example/domain_knowledge/finance/risk/: CMakeLists.txt
example/find_package_example/: CMakeLists.txt  readme.md
example/find_package_example/src/: main.cpp
libminimal/: CMakeLists.txt
libminimal/include/libminimal/: basics_funcs.h  domain_knowledge_funcs.h  intermediate_funcs.h  libminimal.h  low_level_funcs.h  utility.h
libminimal/include/libminimal/basics/: basics.h
libminimal/include/libminimal/basics/namespace_duration_scope_linkage/: Global.h  external.h  global.h
libminimal/include/libminimal/domain_knowledge/: domain_knowledge.h
libminimal/include/libminimal/domain_knowledge/finance/: risk.h
libminimal/include/libminimal/domain_knowledge/finance/portfolio_analysis/: CheckDate.h  CheckSymbol.h  portfolio.h  stock.h
libminimal/include/libminimal/low_level/: base.h
libminimal/src/: utility.cpp
libminimal/src/basics/: basics.cpp  basics_funcs.cpp
libminimal/src/basics/namespace_duration_scope_linkage/: external.cpp  global.cpp  support.cpp
libminimal/src/domain_knowledge/finance/: risk.cpp
libminimal/src/domain_knowledge/finance/portfolio_analysis/: stock.cpp
libminimal/src/low_level/: base.cpp  low_level_funcs.cpp
test/: CMakeLists.txt  test_low_level_funcs.cpp
